--- a/frontend/src/app/components/ui-components/table-display-fields/money/money.component.css
+++ b/frontend/src/app/components/ui-components/table-display-fields/money/money.component.css
@@ -5,3 +5,8 @@
 .field-display {
 	justify-content: flex-end;
 }
+
+.field-copy-button {
+	right: auto;
+	left: 0;
+}
