--- a/frontend/src/app/components/ui-components/table-display-fields/number/number.component.css
+++ b/frontend/src/app/components/ui-components/table-display-fields/number/number.component.css
@@ -6,6 +6,11 @@
 	justify-content: flex-end;
 }
 
+.field-copy-button {
+	right: auto;
+	left: 0;
+}
+
 .out-of-threshold {
 	display: flex;
 	align-items: center;
